[gd_scene load_steps=30 format=3 uid="uid://4pbnis58284y"]

[ext_resource type="Script" path="res://Bote.gd" id="1_ixk2r"]
[ext_resource type="ArrayMesh" uid="uid://btplbs85uhcmx" path="res://Extras/botecito.obj" id="2_jmnwh"]
[ext_resource type="Texture2D" uid="uid://bwy1xqtg5vkov" path="res://Extras/assets/minimapIcon_arrowA.png" id="3_gh3rt"]
[ext_resource type="Texture2D" uid="uid://cysk73obsoent" path="res://Extras/abeja.png" id="4_eowvt"]
[ext_resource type="Texture2D" uid="uid://c1p347gntgf8a" path="res://Extras/gato.png" id="5_jvf6g"]
[ext_resource type="Texture2D" uid="uid://dddj0h2nssbcj" path="res://Extras/osito.png" id="6_1lrtm"]
[ext_resource type="Texture2D" uid="uid://lvmfiag65vav" path="res://Extras/perritos.png" id="7_5h0p1"]
[ext_resource type="Texture2D" uid="uid://8q4qcv85dauc" path="res://Extras/caballito.png" id="8_57ipl"]
[ext_resource type="Texture2D" uid="uid://bletl4kqjw0nx" path="res://Extras/conejito.png" id="9_ifkcj"]
[ext_resource type="Texture2D" uid="uid://bwkcappqhusw3" path="res://Extras/pescadito.png" id="10_uhdfa"]
[ext_resource type="Texture2D" uid="uid://ymbjrf1c3dcm" path="res://Extras/bat.png" id="11_qeg70"]
[ext_resource type="AudioStream" uid="uid://cyhkn8xxpp8sr" path="res://Extras/assets/Recovery.ogg" id="12_8r32k"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_oh7k3"]
points = PackedVector3Array(-0.000246286, 3.43472, 0, -0.000246286, 3.43366, -0.0084995, -0.00451422, 3.43366, -0.00743705, -0.00735927, 3.43366, -0.00424975, -0.00878191, 3.43366, 0, -0.00735927, 3.43366, 0.00407273, -0.00451422, 3.43366, 0.00726002, -0.000246286, 3.43366, 0.00832248, 0.00402141, 3.43366, 0.00726002, 0.00686669, 3.43366, 0.00407273, 0.0082891, 3.43366, 0, 0.00686669, 3.43366, -0.00424975, 0.00402141, 3.43366, -0.00743705, -0.000246286, 3.43118, -0.0166449, -0.0083077, 3.43118, -0.01452, -0.0144722, 3.43118, -0.00832242, -0.0168433, 3.43118, 0, -0.0144722, 3.43118, 0.00814539, -0.0083077, 3.43118, 0.014343, -0.000246286, 3.43118, 0.0164678, 0.00781488, 3.43118, 0.014343, 0.0139797, 3.43118, 0.00814539, 0.0139797, 3.43118, -0.00832242, 0.342124, 3.332, 0.00796831, 0.345444, 3.33129, 0, 0.00781488, 3.43118, -0.01452, -0.000246286, 3.42729, -0.0240819, -0.0121014, 3.42729, -0.0208946, -0.021111, 3.42729, -0.012041, -0.0244305, 3.42729, 0, -0.021111, 3.42729, 0.0118639, -0.0121014, 3.42729, 0.0207176, -0.000246286, 3.42729, 0.0239049, 0.0116086, 3.42729, 0.0207176, 0.0149279, 3.42197, 0.0263839, 0.0177732, 3.41524, 0.0311649, -0.000246286, 3.41524, 0.0359459, 0.0979125, 2.10317, 0.820026, 1.74954, 1.35822, 0.55902, 1.94207, 1.35822, 0.405321, 2.05588, 1.35822, 0.215144, 0.0979125, 2.10317, -0.820203, 0.262933, 3.33129, -0.0231966, 0.0177732, 3.41524, -0.031342, 0.0149279, 3.42197, -0.026561, 0.0116086, 3.42729, -0.0208946, 2.09429, 1.35822, 0, 2.05588, 1.35822, -0.215321, 1.94207, 1.35822, -0.405498, 1.74954, 1.35822, -0.559197, -0.000246286, 3.42197, -0.0306336, -0.0154207, 3.42197, -0.026561, -0.0268013, 3.42197, -0.0154054, -1.44276, 2.53072, -0.00796831, -1.44465, 2.53072, 0, -1.44276, 2.53072, 0.00779122, -0.0268013, 3.42197, 0.0152283, -0.0154207, 3.42197, 0.0263839, -0.000246286, 3.42197, 0.0304566, -0.018266, 3.41524, 0.0311649, 0.361092, 0.794635, 0.884481, 0.721957, 0.824391, 0.8434, 1.42899, 1.35574, 0.685627, -1.36499, 1.87327, 0.535469, -1.46125, 1.11911, 0.675889, -1.10276, 1.04827, 0.758759, -0.72245, 0.824391, 0.842691, -0.361585, 0.794635, 0.884481, -0.000246286, 0.784717, 0.898115, 1.4821, 1.1099, 0.676597, 1.74954, 1.1099, 0.55902, 1.94207, 1.1099, 0.405321, 2.05588, 1.1099, 0.215144, 1.42899, 1.35574, -0.685805, 0.721957, 0.824391, -0.843577, 0.361092, 0.794635, -0.884658, -0.000246286, 0.784717, -0.898292, -0.361585, 0.794635, -0.884658, -0.72245, 0.824391, -0.842869, -1.10276, 1.04827, -0.758936, -1.46125, 1.11911, -0.676066, -1.36499, 1.87327, -0.535646, -0.018266, 3.41524, -0.031342, -0.000246286, 3.41524, -0.0361229, 2.09429, 1.1099, 0, 2.05588, 1.1099, -0.215321, 1.94207, 1.1099, -0.405498, 1.74954, 1.1099, -0.559197, 1.4821, 1.1099, -0.676774, -1.44086, 2.52293, -0.0203634, -1.43896, 2.52718, -0.0173532, -1.44655, 2.52718, -0.0100932, -1.44892, 2.52718, 0, -1.44655, 2.52718, 0.00991613, -1.43896, 2.52718, 0.0171761, -1.44086, 2.52293, 0.0201864, -1.40387, 2.28028, 0.237986, 0.362515, 0.52046, 0.889616, 0.000701904, 0.507353, 0.90449, 0.72907, 0.760275, 0.8434, 1.08899, 0.80845, 0.774872, 1.07903, 0.872566, 0.774872, -2.71882, 1.36318, 0.0325815, -1.72443, 1.17012, 0.55902, -1.47405, 1.0557, 0.676597, -1.15255, 0.993005, 0.755571, -1.08948, 0.80845, 0.774872, -0.729563, 0.760275, 0.8434, -0.363008, 0.52046, 0.889616, 1.08756, 0.623896, 0.771331, 1.41761, 0.70714, 0.67642, 1.69643, 0.920742, 0.554947, 1.52477, 0.690845, 0.616038, 1.90318, 0.965375, 0.398592, 1.87615, 0.727685, 0.353969, 1.98996, 0.745043, 0.18876, 2.02837, 0.743272, 0, 1.08899, 0.80845, -0.775049, 1.07903, 0.872566, -0.775049, 0.72907, 0.760275, -0.843577, 0.362515, 0.52046, -0.889793, 0.000701904, 0.507353, -0.90449, -0.363008, 0.52046, -0.889793, -0.729563, 0.760275, -0.843577, -1.08948, 0.80845, -0.775049, -1.15255, 0.993005, -0.755749, -1.47405, 1.0557, -0.676774, -1.72443, 1.17012, -0.559197, -2.71882, 1.36318, -0.0327585, -1.40387, 2.28028, -0.238163, 1.98996, 0.745043, -0.188937, 1.87615, 0.727685, -0.354146, 1.90318, 0.965375, -0.398769, 1.69643, 0.920742, -0.555125, 1.52477, 0.690845, -0.616215, 1.41761, 0.70714, -0.676597, 1.08756, 0.623896, -0.771508, -2.73779, 1.36672, 0, 0.25013, 0.468388, 0.882533, 0.363463, 0.487162, 0.876867, 0.453087, 0.458824, 0.85491, 0.477271, 0.484328, 0.861461, 0.617633, 0.501686, 0.846941, 0.727173, 0.55978, 0.844639, -0.250623, 0.468388, 0.882533, -0.114054, 0.463783, 0.887491, -0.0889213, 0.440049, 0.878814, 0.000701904, 0.474056, 0.891918, 0.0893769, 0.438987, 0.87846, 0.114984, 0.462366, 0.88696, -2.73115, 1.29977, 0.0325815, -1.73676, 1.10671, 0.55902, -1.42047, 0.865482, 0.679076, -1.08806, 0.623896, 0.771331, -0.727666, 0.55978, 0.844639, -0.363956, 0.487162, 0.876867, -0.618126, 0.501686, 0.846941, -0.477763, 0.484328, 0.861461, -0.453579, 0.458824, 0.85491, 1.08946, 0.591306, 0.756634, 1.27914, 0.525065, 0.660306, 1.31565, 0.638419, 0.694835, 0.981343, 0.560134, 0.781424, 1.00695, 0.541714, 0.764602, 1.34031, 0.621416, 0.675357, 1.4195, 0.675259, 0.661014, 1.50343, 0.662507, 0.613736, 1.57504, 0.599099, 0.54875, 1.54232, 0.590598, 0.561499, 1.82304, 0.55482, 0.300493, 1.87615, 0.516209, 0.174063, 1.90318, 0.497435, 0, 0.727173, 0.55978, -0.844816, 0.617633, 0.501686, -0.847118, 0.477271, 0.484328, -0.861638, 0.453087, 0.458824, -0.855087, 0.363463, 0.487162, -0.877044, 0.25013, 0.468388, -0.88271, 0.000701904, 0.474056, -0.892095, -0.0889213, 0.440049, -0.878991, -0.114054, 0.463783, -0.887668, -0.250623, 0.468388, -0.88271, 0.114984, 0.462366, -0.887137, 0.0893769, 0.438987, -0.878637, -0.363956, 0.487162, -0.877044, -0.453579, 0.458824, -0.855087, -0.477763, 0.484328, -0.861638, -0.618126, 0.501686, -0.847118, -0.727666, 0.55978, -0.844816, -1.08806, 0.623896, -0.771508, -1.73676, 1.10671, -0.559197, -1.42047, 0.865482, -0.679253, -2.73115, 1.29977, -0.0327585, 1.87615, 0.516209, -0.17424, 1.82304, 0.55482, -0.30067, 1.57504, 0.599099, -0.548927, 1.54232, 0.590598, -0.561676, 1.50343, 0.662507, -0.613913, 1.4195, 0.675259, -0.661191, 1.34031, 0.621416, -0.675534, 1.31565, 0.638419, -0.695012, 1.27914, 0.525065, -0.660483, 1.08946, 0.591306, -0.756811, 1.00695, 0.541714, -0.764779, 0.981343, 0.560134, -0.781601, -2.74964, 1.30331, 0, 0.206504, 0.35893, 0.844639, 0.242069, 0.361056, 0.841806, 0.275737, 0.44678, 0.871377, 0.492919, 0.378413, 0.818609, 0.52801, 0.381247, 0.814891, 0.576852, 0.390103, 0.810818, 0.643714, 0.481494, 0.832952, 0.72907, 0.526836, 0.831182, 0.817745, 0.503811, 0.800548, 0.840981, 0.530378, 0.805329, -0.276229, 0.44678, 0.871377, -0.242561, 0.361056, 0.841806, -0.206997, 0.35893, 0.844639, -0.161948, 0.357513, 0.846233, -0.126383, 0.357159, 0.846587, -0.0898697, 0.27356, 0.814183, 0.0884285, 0.272498, 0.813829, 0.12589, 0.355742, 0.846056, 0.161455, 0.355742, 0.845525, -1.68412, 0.327049, 0.191239, -1.82354, 0.55482, 0.300493, -1.66942, 0.447134, 0.358396, -1.68412, 0.659319, 0.482525, -1.69693, 0.920742, 0.554947, -1.19949, 0.601579, 0.721396, -1.17721, 0.573949, 0.717678, -1.08995, 0.591306, 0.756634, -1.00744, 0.541714, 0.764602, -0.981836, 0.560134, 0.781424, -0.841473, 0.530378, 0.805329, -0.818238, 0.503811, 0.800548, -0.729563, 0.526836, 0.831182, -0.644207, 0.481494, 0.832952, -0.492938, 0.378413, 0.818609, -0.577345, 0.390103, 0.810818, -0.528503, 0.381247, 0.814891, 1.21228, 0.393999, 0.624891, 1.32893, 0.432965, 0.593018, 1.31138, 0.532858, 0.648442, 0.977075, 0.453864, 0.736625, 1.01691, 0.379476, 0.689346, 1.10416, 0.362118, 0.65039, 1.10606, 0.329883, 0.634985, 0.892668, 0.431193, 0.75203, 0.942933, 0.447842, 0.745655, 1.35027, 0.461303, 0.596028, 1.4342, 0.448551, 0.54875, 1.53805, 0.485391, 0.514221, 1.51339, 0.50204, 0.534407, 1.66893, 0.447134, 0.358396, 1.68363, 0.327049, 0.191239, 1.69643, 0.289501, 0, 1.68363, 0.327049, -0.191416, 0.840981, 0.530378, -0.805506, 0.817745, 0.503811, -0.800725, 0.72907, 0.526836, -0.831359, 0.643714, 0.481494, -0.833129, 0.576852, 0.390103, -0.810995, 0.52801, 0.381247, -0.815068, 0.492919, 0.378413, -0.818787, 0.242069, 0.361056, -0.841983, 0.275737, 0.44678, -0.871554, 0.206504, 0.35893, -0.844816, -0.0898697, 0.27356, -0.81436, -0.126383, 0.357159, -0.846764, -0.161948, 0.357513, -0.84641, -0.206997, 0.35893, -0.844816, -0.242561, 0.361056, -0.841983, -0.276229, 0.44678, -0.871554, 0.161455, 0.355742, -0.845702, 0.12589, 0.355742, -0.846233, 0.0884285, 0.272498, -0.814006, -0.492938, 0.378413, -0.818787, -0.528503, 0.381247, -0.815068, -0.644207, 0.481494, -0.833129, -0.577345, 0.390103, -0.810995, -0.729563, 0.526836, -0.831359, -0.818238, 0.503811, -0.800725, -0.841473, 0.530378, -0.805506, -0.981836, 0.560134, -0.781601, -1.00744, 0.541714, -0.764779, -1.08995, 0.591306, -0.756811, -1.17721, 0.573949, -0.717855, -1.19949, 0.601579, -0.721573, -1.69693, 0.920742, -0.555125, -1.68412, 0.659319, -0.482702, -1.66942, 0.447134, -0.358573, -1.82354, 0.55482, -0.30067, -1.68412, 0.327049, -0.191416, 1.66893, 0.447134, -0.358573, 1.53805, 0.485391, -0.514398, 1.51339, 0.50204, -0.534584, 1.4342, 0.448551, -0.548927, 1.35027, 0.461303, -0.596206, 1.31138, 0.532858, -0.648619, 1.32893, 0.432965, -0.593195, 1.21228, 0.393999, -0.625068, 1.10606, 0.329883, -0.635162, 1.10416, 0.362118, -0.650567, 1.01691, 0.379476, -0.689523, 0.977075, 0.453864, -0.736802, 0.942933, 0.447842, -0.745832, 0.892668, 0.431193, -0.752207, -1.69693, 0.289501, 0, 0.257243, 0.255849, 0.797892, 0.113561, 0.249118, 0.804267, 0.281427, 0.280999, 0.805329, 0.37105, 0.252661, 0.783549, 0.458777, 0.293043, 0.789038, 0.484384, 0.271789, 0.776997, 0.62854, 0.290918, 0.757519, 0.611469, 0.394353, 0.804798, 0.82628, 0.339802, 0.730781, 0.858052, 0.426588, 0.758936, -0.45927, 0.293043, 0.789038, -0.371543, 0.252661, 0.783549, -0.28192, 0.280999, 0.805329, -0.257736, 0.255849, 0.797892, -0.115476, 0.250535, 0.804798, -0.00119472, 0.238846, 0.800725, -1.41668, 0.170479, 0.228779, -1.41288, 0.321027, 0.433652, -1.21277, 0.393999, 0.624891, -1.25118, 0.506291, 0.66066, -1.10465, 0.362118, 0.65039, -0.977568, 0.453864, 0.736625, -1.21704, 0.49956, 0.670399, -1.18716, 0.412065, 0.642599, -0.943426, 0.447842, 0.745655, -0.893161, 0.431193, 0.75203, -0.858544, 0.426588, 0.758936, -0.826773, 0.339802, 0.730781, -0.611962, 0.394353, 0.804798, -0.484876, 0.271789, 0.776997, -0.629033, 0.290918, 0.757519, 1.4361, 0.41667, 0.532636, 0.994621, 0.3522, 0.684919, 0.851887, 0.319965, 0.715907, 0.742347, 0.261871, 0.718209, 0.72907, 0.129388, 0.586821, 1.08804, 0.211924, 0.515283, 1.41239, 0.321027, 0.433652, 1.41618, 0.170479, 0.228779, 1.41998, 0.121241, 0, 1.41618, 0.170479, -0.228956, 1.41239, 0.321027, -0.433829, 0.858052, 0.426588, -0.759113, 0.82628, 0.339802, -0.730958, 0.611469, 0.394353, -0.804975, 0.62854, 0.290918, -0.757696, 0.484384, 0.271789, -0.777174, 0.458777, 0.293043, -0.789215, 0.37105, 0.252661, -0.783726, 0.281427, 0.280999, -0.805506, 0.257243, 0.255849, -0.798069, 0.113561, 0.249118, -0.804444, -0.115476, 0.250535, -0.804975, -0.00119472, 0.238846, -0.800902, -0.257736, 0.255849, -0.798069, -0.28192, 0.280999, -0.805506, -0.371543, 0.252661, -0.783726, -0.45927, 0.293043, -0.789215, -0.484876, 0.271789, -0.777174, -0.611962, 0.394353, -0.804975, -0.629033, 0.290918, -0.757696, -0.826773, 0.339802, -0.730958, -0.858544, 0.426588, -0.759113, -0.893161, 0.431193, -0.752207, -0.943426, 0.447842, -0.745832, -0.977568, 0.453864, -0.736802, -1.10465, 0.362118, -0.650567, -1.18716, 0.412065, -0.642776, -1.21704, 0.49956, -0.670576, -1.25118, 0.506291, -0.660837, -1.21277, 0.393999, -0.625068, -1.41288, 0.321027, -0.433829, -1.41668, 0.170479, -0.228956, 1.4361, 0.41667, -0.532813, 1.08804, 0.211924, -0.51546, 0.72907, 0.129388, -0.586998, 0.742347, 0.261871, -0.718386, 0.851887, 0.319965, -0.716084, 0.994621, 0.3522, -0.685096, -1.42047, 0.121241, 0, 0.371999, 0.219717, 0.769914, -0.00119472, 0.205902, 0.787268, 0.651776, 0.317131, 0.763186, 0.740451, 0.29446, 0.732552, -0.372492, 0.219717, 0.769914, -1.089, 0.0443725, 0.274995, -1.08853, 0.211924, 0.515283, -1.10655, 0.329883, 0.634985, -0.995113, 0.3522, 0.684919, -1.0174, 0.379476, 0.689346, -0.85238, 0.319965, 0.715907, -0.74284, 0.261871, 0.718209, -0.740943, 0.29446, 0.732552, -0.652268, 0.317131, 0.763186, 0.364412, 0.0790872, 0.63162, 0.72907, -0.048082, 0.317138, 1.08851, 0.0443725, 0.274995, 1.08899, -0.0112419, 0, 1.08851, 0.0443725, -0.275172, 0.740451, 0.29446, -0.732729, 0.651776, 0.317131, -0.763363, 0.371999, 0.219717, -0.770091, -0.00119472, 0.205902, -0.787445, -0.372492, 0.219717, -0.770091, -0.74284, 0.261871, -0.718386, -0.652268, 0.317131, -0.763363, -0.740943, 0.29446, -0.732729, -0.85238, 0.319965, -0.716084, -0.995113, 0.3522, -0.685096, -1.0174, 0.379476, -0.689523, -1.10655, 0.329883, -0.635162, -1.08853, 0.211924, -0.51546, -1.089, 0.0443725, -0.275172, 0.72907, -0.048082, -0.317315, 0.364412, 0.0790872, -0.631797, -1.08948, -0.0112419, 0, -0.000246286, 0.0624383, 0.646671, -0.364904, 0.0790872, 0.63162, -0.729563, -0.048082, 0.317138, -0.729563, 0.129388, 0.586821, 0.364412, -0.104051, 0.343699, 0.72907, -0.107239, 0, -0.000246286, 0.0624383, -0.646848, -0.364904, 0.0790872, -0.631797, -0.729563, 0.129388, -0.586998, -0.729563, -0.048082, -0.317315, 0.364412, -0.104051, -0.343876, -0.729563, -0.107239, 0, -0.364904, -0.104051, 0.343699, -0.000246286, -0.122471, 0.35273, 0.364412, -0.164978, 0, -0.000246286, -0.122471, -0.352907, -0.364904, -0.104051, -0.343876, -0.364904, -0.164978, 0, -0.000246286, -0.184107, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j5rse"]
albedo_texture = ExtResource("4_eowvt")

[sub_resource type="SphereMesh" id="SphereMesh_81uat"]
material = SubResource("StandardMaterial3D_j5rse")
radius = 0.25
height = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lycc2"]
albedo_texture = ExtResource("5_jvf6g")

[sub_resource type="SphereMesh" id="SphereMesh_n6wsi"]
material = SubResource("StandardMaterial3D_lycc2")
radius = 0.25
height = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6e102"]
albedo_texture = ExtResource("6_1lrtm")

[sub_resource type="SphereMesh" id="SphereMesh_hlpcs"]
material = SubResource("StandardMaterial3D_6e102")
radius = 0.25
height = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t0kmp"]
albedo_texture = ExtResource("7_5h0p1")

[sub_resource type="SphereMesh" id="SphereMesh_7ro5t"]
material = SubResource("StandardMaterial3D_t0kmp")
radius = 0.25
height = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3ofyr"]
albedo_texture = ExtResource("8_57ipl")

[sub_resource type="SphereMesh" id="SphereMesh_4u6xr"]
material = SubResource("StandardMaterial3D_3ofyr")
radius = 0.25
height = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6crdo"]
albedo_texture = ExtResource("9_ifkcj")

[sub_resource type="SphereMesh" id="SphereMesh_ag0ie"]
material = SubResource("StandardMaterial3D_6crdo")
radius = 0.25
height = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ra06a"]
albedo_texture = ExtResource("10_uhdfa")

[sub_resource type="SphereMesh" id="SphereMesh_0p7my"]
material = SubResource("StandardMaterial3D_ra06a")
radius = 0.25
height = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_befbo"]
albedo_texture = ExtResource("11_qeg70")

[sub_resource type="SphereMesh" id="SphereMesh_gdsuh"]
material = SubResource("StandardMaterial3D_befbo")
radius = 0.25
height = 0.5

[node name="Bote" type="RigidBody3D"]
linear_damp = 1.0
angular_damp = 2.0
script = ExtResource("1_ixk2r")

[node name="MeshInstance" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
mesh = ExtResource("2_jmnwh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_oh7k3")

[node name="H" type="Node3D" parent="."]

[node name="V" type="Node3D" parent="H"]
transform = Transform3D(0.841728, -0.539903, 0, 0.539903, 0.841728, 0, 0, 0, 1, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="H/V"]
transform = Transform3D(0.841727, 0.533323, 0.0840313, -0.539902, 0.83147, 0.131008, 5.32691e-10, -0.155642, 0.987814, 1.61162, 2.55783, 5.80538)
cull_mask = 1047553

[node name="GrupoFloty" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.07286, 0.130448, -2.76095)

[node name="Floatadores" type="Node3D" parent="GrupoFloty"]

[node name="Floatadores2" type="Node3D" parent="GrupoFloty"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.9328, 0, 0.000859976)

[node name="Floatadores3" type="Node3D" parent="GrupoFloty"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.97218, 0, 4.86019)

[node name="Floatadores4" type="Node3D" parent="GrupoFloty"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.130192, 0, 4.84252)

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 4.11482, 0)
layers = 512
axis = 1
texture = ExtResource("3_gh3rt")

[node name="Tripulacion" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.42757, -2.01628)

[node name="Capi" type="MeshInstance3D" parent="Tripulacion"]
mesh = SubResource("SphereMesh_81uat")
skeleton = NodePath("../..")

[node name="Gato" type="MeshInstance3D" parent="Tripulacion"]
transform = Transform3D(0.689796, 0, -0.724003, 0, 1, 0, 0.724003, 0, 0.689796, 0.288666, -0.121853, 0.304798)
mesh = SubResource("SphereMesh_n6wsi")
skeleton = NodePath("../..")

[node name="osito" type="MeshInstance3D" parent="Tripulacion"]
transform = Transform3D(0.828002, 0, 0.560726, 0, 1, 0, -0.560726, 0, 0.828002, -0.3874, -0.236875, 0.512934)
visible = false
mesh = SubResource("SphereMesh_hlpcs")

[node name="Perritos1" type="MeshInstance3D" parent="Tripulacion"]
transform = Transform3D(-0.560466, 0, 0.828178, 0, 1, 0, -0.828178, 0, -0.560466, -0.52719, -0.464908, 1.2301)
visible = false
mesh = SubResource("SphereMesh_7ro5t")

[node name="Perritos2" type="MeshInstance3D" parent="Tripulacion"]
transform = Transform3D(-0.420767, 0, -0.907169, 0, 1, 0, 0.907169, 0, -0.420767, 0.533113, -0.464908, 1.2301)
visible = false
mesh = SubResource("SphereMesh_7ro5t")

[node name="caballito" type="MeshInstance3D" parent="Tripulacion"]
transform = Transform3D(0.573105, 0, 0.819482, 0, 1, 0, -0.819482, 0, 0.573105, -0.52719, -0.464908, 2.72732)
visible = false
mesh = SubResource("SphereMesh_4u6xr")

[node name="conejito" type="MeshInstance3D" parent="Tripulacion"]
transform = Transform3D(0.999849, 0, 0.0173826, 0, 1, 0, -0.0173826, 0, 0.999849, -0.103734, -0.137941, 3.73079)
visible = false
mesh = SubResource("SphereMesh_ag0ie")

[node name="pescadito" type="MeshInstance3D" parent="Tripulacion"]
transform = Transform3D(0.999849, 0, 0.0173826, 0, 1, 0, -0.0173826, 0, 0.999849, -0.103734, -1.25444, -1.27157)
visible = false
mesh = SubResource("SphereMesh_0p7my")

[node name="bat" type="MeshInstance3D" parent="Tripulacion"]
transform = Transform3D(0.999702, 0.0171557, 0.01738, -0.0171532, 0.999853, -0.000298211, -0.0173826, 0, 0.999849, -0.000208557, 1.58008, 2.09692)
visible = false
mesh = SubResource("SphereMesh_gdsuh")

[node name="UI" type="MarginContainer" parent="."]
offset_right = 283.0
offset_bottom = 72.0

[node name="Plata" type="TextEdit" parent="UI"]
layout_mode = 2
text = "$$: 0"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_8r32k")
bus = &"Sfx"

[connection signal="body_entered" from="." to="." method="_cuando_entra_algo"]
